--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-intersect": "^2.2.0",
+    "tailwindcss-motion": "^1.1.1",
     "typescript": "^5"
   }
 }
